# Quba-GTK

./: .gitignore  Cargo.toml  NOTICE  README.md  package-lock.json  package.json
data/: org.zugferd.QubaViewer.desktop  org.zugferd.QubaViewer.metainfo.xml
docs/: PARITY.md
flatpak/: org.zugferd.QubaViewer.json
scripts/: install-local.sh  quba-render-helper.cjs
src/: document.rs  i18n.rs  main.rs  paths.rs  ui.rs
